<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="18dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginBottom="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginRight="18dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/book"/>

            <EditText
                android:id="@+id/etCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/courseName"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginRight="18dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/user"/>

            <EditText
                android:id="@+id/etTeacherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/courseTeacher"
                android:textSize="20dp" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginRight="18dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/start"/>

            <EditText
                android:id="@+id/etStartWeek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/startWeek"
                android:textSize="20dp" />

            <ImageView
                android:layout_marginRight="18dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/end"/>

            <EditText
                android:id="@+id/etEndWeek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/endWeek"
                android:textSize="20dp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>