<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.timetable.activity.UpdateCourseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titleColor"
        android:orientation="horizontal"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivArrowLeft"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-2dp"
                android:src="@drawable/arrow_left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_toEndOf="@id/ivArrowLeft"
                android:text="@string/back"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:onClick="delCourse"
                android:text="@string/delCourse"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvCourseName"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--课程信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:background="@drawable/item_bg"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="18dp">
                <!--课程-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="23dp">

                    <EditText
                        android:id="@+id/etCourseName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/courseName"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="18dp"
                        android:src="@drawable/book" />
                </LinearLayout>
                <!--授课老师-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="23dp">

                    <EditText
                        android:id="@+id/etTeacherName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/courseTeacher"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="18dp"
                        android:src="@drawable/user" />
                </LinearLayout>

                <!--周次-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!--起始周次-->
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="18dp"
                        android:src="@drawable/start" />

                    <EditText
                        android:id="@+id/etStartWeek"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/startWeek"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="18dp"
                        android:src="@drawable/end" />

                    <EditText
                        android:id="@+id/etEndWeek"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/endWeek"
                        android:textSize="20dp" />

                </LinearLayout>


            </LinearLayout>

            <!--节次信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:layout_weight="1">

                <ListView
                    android:id="@+id/lvLesson"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@null"
                    android:listSelector="@android:color/transparent"></ListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/item_bg"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="20dp">

                <TextView
                    android:id="@+id/btnAddCourse"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/btn"
                    android:gravity="center"
                    android:onClick="addLesson"
                    android:text="@string/addSection"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/btnSave"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/btn"
                    android:gravity="center"
                    android:onClick="save"
                    android:text="@string/saveEdit"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>