<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:padding="18dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginBottom="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginRight="18dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/time"/>

            <Spinner
                android:id="@+id/Weekdays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/Weekdays" />

            <Spinner
                android:id="@+id/sections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/Sections" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginRight="18dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/calendar"/>
            <RadioGroup
                android:id="@+id/rgWeekType"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbNormalWeek"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/normal"
                    android:textColor="#B9B9B9"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbSingleWeek"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/singleWeek"
                    android:textColor="#B9B9B9"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbDoubleWeek"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/doubleWeek"
                    android:textColor="#B9B9B9"
                    android:textSize="12sp" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginRight="18dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/location"/>

            <Spinner
                android:id="@+id/techBuilding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/TechBuildings"/>

            <EditText
                android:id="@+id/tvClassroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/classRoom"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>